order placed component added now

--- a/src/app/Components/order-placed/order-placed.component.html
+++ b/src/app/Components/order-placed/order-placed.component.html
@@ -1,1 +1,26 @@
-<p>order-placed works!</p>
+<div class="main-div">
+  <div class="icon-div">
+    <img src="../../../assets/icon/orderPlaced.svg" alt="" />
+  </div>
+  <h1>Order Placed Successfully</h1>
+  <div class="success-order-placed">
+    <span>
+      hurray!!! your order is confirmed <br />
+      the order id is #123456 save the order id for <br />
+      further communication..
+    </span>
+  </div>
+  <table class="contact-table">
+    <tr>
+      <th>Email us</th>
+      <th>Contact</th>
+      <th>Address</th>
+    </tr>
+    <tr>
+      <td>admin@bookstore.com</td>
+      <td>+91 8163475881</td>
+      <td>42, 14th Main, 15th Cross, Sector 4 ,opp to BDA <br> complex, near Kumarakom restaurant, <br> HSR Layout, Bangalore 560034</td>
+    </tr>
+  </table>
+</div>
+<app-footer></app-footer>
