--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -6,9 +6,12 @@
       <input class="search-input-box" type="search" placeholder="Search...">
     </form>
   </div>
+  <div class="login-icon">
+          <img routerLink="/login" src="../../../assets/icon/profileIcon.png" alt="Notfound">
+  </div>
   <div class="cart-div">
-    <span class="cart-text" routerLink="/cart">Cart</span>
     <img class="cart-icon" routerLink="/cart" src="../../../assets/icon/supermarket.svg" alt="Logo Not found" />
+    <span class="cart-text" routerLink="/cart">Cart</span>
     <p class="cart-count">1</p>
   </div>
 </mat-toolbar>
